# whiteline_detector

./: README.md  wldetection-pytorch.ipynb  wldetection.ipynb  wldetection2.ipynb
cpp_pytorch/: CMakeLists.txt  wltest.cpp
